# js-analyzer-comparison

./: .gitignore  Makefile  README.md  counts.md  deploy.py  pyproject.toml  run.py  stats.py
wala-demo/: pom.xml
wala-demo/src/main/java/com/github/izgzhen/wala/demo/: Main.java
