[tool.poetry]
name = "js-tools"
version = "0.1.0"
description = ""
authors = ["y"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
msbase = {git = "https://github.com/izgzhen/msbase.py"}
pandas = "^1.0.3"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
